# sdmdb

./: .gitignore  Doxyfile  LICENSE  README.md  VERSION
src/: CMakeLists.txt  README.md  config.h.in  sdmconfig.h.in
src/mms/: README.md  bitvector.hpp  elemental_vector.hpp  ephemeral_vector.hpp  semantic_vector.hpp  symbol.hpp  symbol_space.hpp
src/rtl/: CMakeLists.txt  database.cpp  database.hpp  geometry.hpp  lookup.hpp  manifold.cpp  manifold.hpp  sdmconfig.h  sdmlib.cpp  sdmlib.h  sdmstatus.h  sdmtypes.h  topology.hpp
src/test/: CMakeLists.txt  affinity.cpp  capi.c  feature_map.hpp  frametrain.cpp  index_bimap.hpp  mms_0.cpp  rtl_api.cpp  rtl_load_space.cpp  rtl_manifold.cpp  sdmi.cpp  sparse_matrix.hpp  sparse_matrix_io.hpp
src/util/: fast_random.hpp
